--- a/package.json
+++ b/package.json
@@ -3,35 +3,37 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-      "dev": "next dev --turbo",
-      "build": "next build",
-      "start": "next start",
-      "lint": "next lint"
+        "dev": "next dev --turbo",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
     },
     "dependencies": {
-      "@types/node": "^20.8.2",
-      "@types/react": "^18.2.24",
-      "@types/react-dom": "^18.2.8",
-      "autoprefixer": "^10.4.16",
-      "critters": "^0.0.20",
-      "framer-motion": "^10.16.4",
-      "next": "^15.1.7",
-      "postcss": "^8.4.31",
-      "react": "^18.2.0",
-      "react-dom": "^18.2.0",
-      "react-icons": "^4.11.0",
-      "react-intersection-observer": "^9.5.2",
-      "tailwindcss": "^3.3.3",
-      "typescript": "^5.2.2"
+        "@emailjs/browser": "^4.4.1",
+        "@types/node": "^20.8.2",
+        "@types/react": "^18.2.24",
+        "@types/react-dom": "^18.2.8",
+        "autoprefixer": "^10.4.16",
+        "critters": "^0.0.20",
+        "framer-motion": "^10.16.4",
+        "next": "^15.1.7",
+        "postcss": "^8.4.31",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-hot-toast": "^2.5.2",
+        "react-icons": "^4.11.0",
+        "react-intersection-observer": "^9.5.2",
+        "tailwindcss": "^3.3.3",
+        "typescript": "^5.2.2"
     },
     "devDependencies": {
-      "@tailwindcss/forms": "^0.5.6",
-      "@typescript-eslint/eslint-plugin": "^6.7.4",
-      "@typescript-eslint/parser": "^6.7.4",
-      "eslint": "^8.50.0",
-      "eslint-config-next": "^13.5.4",
-      "postcss-nesting": "^12.0.1",
-      "prettier": "^3.0.3",
-      "prettier-plugin-tailwindcss": "^0.5.4"
+        "@tailwindcss/forms": "^0.5.6",
+        "@typescript-eslint/eslint-plugin": "^6.7.4",
+        "@typescript-eslint/parser": "^6.7.4",
+        "eslint": "^8.50.0",
+        "eslint-config-next": "^13.5.4",
+        "postcss-nesting": "^12.0.1",
+        "prettier": "^3.0.3",
+        "prettier-plugin-tailwindcss": "^0.5.4"
     }
-  }
+}
